# fast_lsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/indexer/: lexer.hpp  ws_watcher.hpp
include/logging/: logger.hpp
include/utils/: common.hpp
src/: fast_lsp.cpp
src/indexer/: CMakeLists.txt  indexer.cpp  lexer.cpp  ws_watcher.cpp
src/logging/: CMakeLists.txt  logger.cpp
src/utils/: CMakeLists.txt  common.cpp
tests/: CMakeLists.txt  test_main.cpp  ws_watcher_tests.cpp
